@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US026

class Organization {
}

class GreenSpacesManager {
    email
}

class Agenda {
}

class Entry {
    startingDate
    status
    task
}

class Vehicle {
    brand
    model
    tare
    grossWeight
    currentKm
    registerDate
    acquisitionDate
    maintenanceCheckUpFrequency
    plateNumber
    type
}

Organization "1" -- "1..*" GreenSpacesManager : has >
Organization "1" -- "1" Agenda : has >
GreenSpacesManager "1" -- "1..*" Vehicle : selects  >
Agenda "1" -- "0..*" Entry : has >
Vehicle "1..*" -- "1" Entry : assigned to >

@enduml